app/stylesheets/components/button.css
.button-outline,
.button-outline:focus {
  border-width: 2px;
  transition-property: border, box-shadow, background-color;
  box-shadow: none;
}

/* --- */

.button-outline.white {
  border-color: color(var(--white) alpha(50%));
}

.button-outline.white:hover {
  border-color: var(--white);
}

.button-outline.white:active {
  background-color: color(var(--black) alpha(20%));
  box-shadow: none;
}

/* --- */

.button-outline.black {
  border-color: color(var(--black) alpha(50%));
}

.button-outline.black:hover {
  border-color: var(--black);
}

